@@ -92,10 +92,10 @@
   <!-- LICENSES -->
 
   <string name="license_author_google" translatable="false">Google</string>
-  <string name="license_material_icons" translatable="false">Material Design Icons</string>
-  <string name="license_material_icons_link" translatable="false">https://github.com/google/material-design-icons</string>
   <string name="license_material_components" translatable="false">Material Components Android</string>
   <string name="license_material_components_link" translatable="false">https://github.com/material-components/material-components-android</string>
+  <string name="license_material_icons" translatable="false">Material Design Icons</string>
+  <string name="license_material_icons_link" translatable="false">https://github.com/google/material-design-icons</string>
   <string name="license_jost" translatable="false">Jost* Typeface</string>
   <string name="license_jost_author" translatable="false">Owen Earl</string>
   <string name="license_jost_link" translatable="false">https://github.com/indestructible-type/Jost</string>
